--- a/src/app/flashcard/edit-flashcard/edit-flashcard.component.html
+++ b/src/app/flashcard/edit-flashcard/edit-flashcard.component.html
@@ -1,6 +1,6 @@
-<div class="row">
-  <div class="col-lg-12">
-    <div (click)="navigateBack()" class="btn-circular mb-3" [inlineSVG]="'/assets/images/icon-left.svg'"></div>
+<div class="row header mb-3">
+  <div class="col-lg">
+    <h1>Flashcards > Add</h1>
   </div>
 </div>
 
