--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -6,3 +6,7 @@ $app-background-color: $blue-grey-50;
 
 $brand-primary: $deep-orange-800;
 //$app-secondary-accent:
+
+$header-background-color: white;
+$border-color: $grey-600;
+$heading-font-color: $grey-800;
