--- a/src/app/bullet-page/list-bullet-pages/list-bullet-pages.component.html
+++ b/src/app/bullet-page/list-bullet-pages/list-bullet-pages.component.html
@@ -1,11 +1,9 @@
-<div class="row">
+<div class="row header">
   <div class="col-lg">
-    <span class="page-title">Bullets</span>
-    <div class="btn-circular" [inlineSVG]="'/assets/images/icon-add.svg'" [routerLink]="['bullet-pages', 0, 'edit']"></div>
+    <h1>Bullets</h1>
   </div>
 </div>
-
-
 <div class="d-flex" *ngFor="let bulletPage of bulletPages" [routerLink]="['bullet-pages', bulletPage.id]">
   <app-bullet-page [bulletPage]="bulletPage"></app-bullet-page>
 </div>
+<div class="btn-circular" [inlineSVG]="'/assets/images/icon-add.svg'" [routerLink]="['bullet-pages', 0, 'edit']"></div>
