--- a/src/app/flashcard/list-flashcards/list-flashcards.component.html
+++ b/src/app/flashcard/list-flashcards/list-flashcards.component.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="header row mb-3">
   <div class="col-lg">
-    <div class="btn-circular" [inlineSVG]="'/assets/images/icon-add.svg'" routerLink="0/edit"></div>
-
+    <h1>Flashcards</h1>
   </div>
 </div>
+<div class="btn-circular" [inlineSVG]="'/assets/images/icon-add.svg'" routerLink="0/edit"></div>
