--- a/src/app/bullets/bullet/bullet.component.scss
+++ b/src/app/bullets/bullet/bullet.component.scss
@@ -7,12 +7,9 @@
   padding: 5px 12px;
   width: auto;
   font-size: 1.1em;
-  border: 1px solid $blue-grey-100;
+  border: 1px solid $border-color;
   cursor: pointer;
   user-select: none;
-}
 
-.link{
-  font-size: 0.8em;
-  color: $grey-100;
+
 }
