--- a/src/app/mcq/select-mcq-tags/select-mcq-tags.component.html
+++ b/src/app/mcq/select-mcq-tags/select-mcq-tags.component.html
@@ -1,9 +1,11 @@
-<div class="row  mb-3">
+<div class="row  mb-3 header">
   <div class="col-lg">
-    <div class="btn-circular mr-3" [inlineSVG]="'/assets/images/icon-browse.svg'" routerLink="browse"></div>
-    <div class="btn-circular" [inlineSVG]="'/assets/images/icon-add.svg'" [routerLink]="['0', 'edit']"></div>
+    <h1>MCQs</h1>
   </div>
 </div>
 <app-tag-search></app-tag-search>
+
+<div class="btn-circular mr-3" [inlineSVG]="'/assets/images/icon-browse.svg'" routerLink="browse"></div>
+<div class="btn-circular" [inlineSVG]="'/assets/images/icon-add.svg'" [routerLink]="['0', 'edit']"></div>
 
 <div class="btn-circular mt-3" [inlineSVG]="'/assets/images/icon-right.svg'"></div>
